created most of the html which will be needed in the future

--- a/index.html
+++ b/index.html
@@ -7,24 +7,50 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="calculation">0</div>
+    <div class="result"></div>
       <div class="container">
         <!-- !delete and clear functions -->
-        <div class="clearAll"></div>
-        <div class="deleteNumber"></div>
+        <button class="clearAll">clear</button>
+        <button class="deleteNumber">delete</button>
 
         <!-- !numbers and equations signs -->
-        <!--* 7 -->
-        <div class="numberSeven number"></div>
-        <!--* 8 -->
-        <div class="numberEight number"></div>
-        <!--* 9 -->
-        <div class="numberNine number"></div>
-        <!--* 4 -->
-        <div class="numberFour number"></div>
-        <!--* 5 -->
-        <div class="numberFive number"></div>
-        <!--* 6 -->
-        <div class="numberSix number"></div>
+        <!--*FIRST ROW-->
+        <!--? 7 -->
+        <div class="Seven button">7</div>
+        <!--? 8 -->
+        <div class="Eight button">8</div>
+        <!--? 9 -->
+        <div class="Nine button">9</div>
+        <!--? ÷  -->
+        <div class="divisionSign button">÷</div>
+        <!--* SECOND ROW -->
+        <!--? 4 -->
+        <div class="Four button">4</div>
+        <!--? 5 -->
+        <div class="Five button">5</div>
+        <!--? 6 -->
+        <div class="Six button">6</div>
+        <!--? × -->
+        <div class="malzeichen">×</div>
+        <!--* THIRD ROW -->
+        <!--? 1 -->
+        <div class="One button">1</div>
+        <!--? 2 -->
+        <div class="Two button">2</div>
+        <!--? 3 -->
+        <div class="Three button">3</div>
+        <!--? minus - -->
+        <div class="minusSign">-</div>
+        <!--* FOURTH ROW -->
+        <!--? Decimal Point  -->
+        <div class="decimalPoint button">.</div>
+        <!--? 0  -->
+        <div class="numberZero button">0</div>
+        <!--? =  -->
+        <div class="equalTo button">=</div>
+        <!--? +  -->
+        <div class="plusSign button">+</div>
       </div>
 </body>
 </html>
