redesigned the html

--- a/index.html
+++ b/index.html
@@ -8,50 +8,57 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="calculation">0</div>
-    <div class="result"></div>
       <div class="container">
-        <!-- !delete and clear functions -->
-        <button class="clearAll">clear</button>
-        <button class="deleteNumber">delete</button>
+        <div class="containerResult">
+          <div class="calculation">0</div>
+          <div class="result"></div>
+        </div>
 
-        <!-- !numbers and equations signs -->
-        <!--*FIRST ROW-->
-        <!--? 7 -->
-        <div class="Seven button">7</div>
-        <!--? 8 -->
-        <div class="Eight button">8</div>
-        <!--? 9 -->
-        <div class="Nine button">9</div>
-        <!--? ÷  -->
-        <div class="divisionSign button">÷</div>
-        <!--* SECOND ROW -->
-        <!--? 4 -->
-        <div class="Four button">4</div>
-        <!--? 5 -->
-        <div class="Five button">5</div>
-        <!--? 6 -->
-        <div class="Six button">6</div>
-        <!--? × -->
-        <div class="malzeichen">×</div>
-        <!--* THIRD ROW -->
-        <!--? 1 -->
-        <div class="One button">1</div>
-        <!--? 2 -->
-        <div class="Two button">2</div>
-        <!--? 3 -->
-        <div class="Three button">3</div>
-        <!--? minus - -->
-        <div class="minusSign">-</div>
-        <!--* FOURTH ROW -->
-        <!--? Decimal Point  -->
-        <div class="decimalPoint button">.</div>
-        <!--? 0  -->
-        <div class="numberZero button">0</div>
-        <!--? =  -->
-        <div class="equalTo button">=</div>
-        <!--? +  -->
-        <div class="plusSign button">+</div>
+        <div class="containerDelete">
+        <!-- !delete and clear functions -->
+            <button class="clearAll">clear</button>
+            <button class="deleteNumber">delete</button>
+        </div>
+
+        <div class="containerEquations">
+            <!-- !numbers and equations signs -->
+            <!--*FIRST ROW-->
+            <!--? 7 -->
+            <div class="Seven button">7</div>
+            <!--? 8 -->
+            <div class="Eight button">8</div>
+            <!--? 9 -->
+            <div class="Nine button">9</div>
+            <!--? ÷  -->
+            <div class="divisionSign button">÷</div>
+            <!--* SECOND ROW -->
+            <!--? 4 -->
+            <div class="Four button">4</div>
+            <!--? 5 -->
+            <div class="Five button">5</div>
+            <!--? 6 -->
+            <div class="Six button">6</div>
+            <!--? × -->
+            <div class="malzeichen">×</div>
+            <!--* THIRD ROW -->
+            <!--? 1 -->
+            <div class="One button">1</div>
+            <!--? 2 -->
+            <div class="Two button">2</div>
+            <!--? 3 -->
+            <div class="Three button">3</div>
+            <!--? minus - -->
+            <div class="minusSign">-</div>
+            <!--* FOURTH ROW -->
+            <!--? Decimal Point  -->
+            <div class="decimalPoint button">.</div>
+            <!--? 0  -->
+            <div class="numberZero button">0</div>
+            <!--? =  -->
+            <div class="equalTo button">=</div>
+            <!--? +  -->
+            <div class="plusSign button">+</div>
+        </div>
       </div>
 </body>
 <script source="main.js"></script>
