finished styling the calculator with css

--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
             <!-- !numbers and equations signs -->
             <!--*FIRST ROW-->
             <!--? 7 -->
-            <div class="Seven button">7</div>
+            <button class="Seven button">7</button>
             <!--? 8 -->
-            <div class="Eight button">8</div>
+            <button class="Eight button">8</button>
             <!--? 9 -->
-            <div class="Nine button">9</div>
+            <button class="Nine button">9</button>
             <!--? ÷  -->
-            <div class="divisionSign button">÷</div>
+            <button class="buttonisionSign button">÷</button>
             <!--* SECOND ROW -->
             <!--? 4 -->
-            <div class="Four button">4</div>
+            <button class="Four button">4</button>
             <!--? 5 -->
-            <div class="Five button">5</div>
+            <button class="Five button">5</button>
             <!--? 6 -->
-            <div class="Six button">6</div>
+            <button class="Six button">6</button>
             <!--? × -->
-            <div class="malzeichen">×</div>
+            <button class="malzeichen">×</button>
             <!--* THIRD ROW -->
             <!--? 1 -->
-            <div class="One button">1</div>
+            <button class="One button">1</button>
             <!--? 2 -->
-            <div class="Two button">2</div>
+            <button class="Two button">2</button>
             <!--? 3 -->
-            <div class="Three button">3</div>
+            <button class="Three button">3</button>
             <!--? minus - -->
-            <div class="minusSign">-</div>
+            <button class="minusSign">-</button>
             <!--* FOURTH ROW -->
             <!--? Decimal Point  -->
-            <div class="decimalPoint button">.</div>
+            <button class="decimalPoint button">.</button>
             <!--? 0  -->
-            <div class="numberZero button">0</div>
+            <button class="numberZero button">0</button>
             <!--? =  -->
-            <div class="equalTo button">=</div>
+            <button class="equalTo button">=</button>
             <!--? +  -->
-            <div class="plusSign button">+</div>
+            <button class="plusSign button">+</button>
         </div>
       </div>
 </body>
