added some functions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--? 6 -->
             <button class="Six button">6</button>
             <!--? × -->
-            <button class="malzeichen">×</button>
+            <button class="malzeichen button">×</button>
             <!--* THIRD ROW -->
             <!--? 1 -->
             <button class="One button">1</button>
@@ -48,7 +48,7 @@
             <!--? 3 -->
             <button class="Three button">3</button>
             <!--? minus - -->
-            <button class="minusSign">-</button>
+            <button class="minusSign button">-</button>
             <!--* FOURTH ROW -->
             <!--? Decimal Point  -->
             <button class="decimalPoint button">.</button>
@@ -61,5 +61,5 @@
         </div>
       </div>
 </body>
-<script source="main.js"></script>
+<script src="./main.js"></script>
 </html>
