added a value to every button

--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
             <!-- !numbers and equations signs -->
             <!--*FIRST ROW-->
             <!--? 7 -->
-            <button class="Seven button">7</button>
+            <button class="Seven button" value="7">7</button>
             <!--? 8 -->
-            <button class="Eight button">8</button>
+            <button class="Eight button" value="8">8</button>
             <!--? 9 -->
-            <button class="Nine button">9</button>
+            <button class="Nine button" value="9">9</button>
             <!--? ÷  -->
-            <button class="buttonisionSign button">÷</button>
+            <button class="buttonisionSign button" value="/">÷</button>
             <!--* SECOND ROW -->
             <!--? 4 -->
-            <button class="Four button">4</button>
+            <button class="Four button" value="4">4</button>
             <!--? 5 -->
-            <button class="Five button">5</button>
+            <button class="Five button" value="5">5</button>
             <!--? 6 -->
-            <button class="Six button">6</button>
+            <button class="Six button" value="6">6</button>
             <!--? × -->
-            <button class="malzeichen button">×</button>
+            <button class="malzeichen button" value="*">×</button>
             <!--* THIRD ROW -->
             <!--? 1 -->
-            <button class="One button">1</button>
+            <button class="One button" value="1">1</button>
             <!--? 2 -->
-            <button class="Two button">2</button>
+            <button class="Two button" value="2">2</button>
             <!--? 3 -->
-            <button class="Three button">3</button>
+            <button class="Three button" value="3">3</button>
             <!--? minus - -->
-            <button class="minusSign button">-</button>
+            <button class="minusSign button" value="-">-</button>
             <!--* FOURTH ROW -->
             <!--? Decimal Point  -->
-            <button class="decimalPoint button">.</button>
+            <button class="decimalPoint button" value=".">.</button>
             <!--? 0  -->
-            <button class="numberZero button">0</button>
+            <button class="numberZero button" value="0">0</button>
             <!--? =  -->
-            <button class="equalTo button">=</button>
+            <button class="equalTo button" value="=">=</button>
             <!--? +  -->
-            <button class="plusSign button">+</button>
+            <button class="plusSign button" value="+">+</button>
         </div>
       </div>
 </body>
