--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
       <div class="container">
         <div class="containerResult">
-          <div class="calculation">0</div>
+          <div class="calculation" placeholder="0"></div>
           <div class="result"></div>
         </div>
 
