--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
       <div class="container">
         <div class="containerResult">
-          <div class="calculation" placeholder="0"></div>
+          <div class="calculation" placeholder=""></div>
           <div class="result"></div>
         </div>
 
@@ -33,7 +33,7 @@
             <button class="buttonisionSign button" value="/">÷</button>
             <!--* SECOND ROW -->
             <!--? 4 -->
-            <button class="Four button" value="4">4</button>
+            <button class="Four button number4" value="4">4</button>
             <!--? 5 -->
             <button class="Five button" value="5">5</button>
             <!--? 6 -->
