added new class names and removed class name button

--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
             <!-- !numbers and equations signs -->
             <!--*FIRST ROW-->
             <!--? 7 -->
-            <button class="Seven button" value="7">7</button>
+            <button class="number7" value="7">7</button>
             <!--? 8 -->
-            <button class="Eight button" value="8">8</button>
+            <button class="number8" value="8">8</button>
             <!--? 9 -->
-            <button class="Nine button" value="9">9</button>
+            <button class="number9" value="9">9</button>
             <!--? ÷  -->
-            <button class="buttonisionSign button" value="/">÷</button>
+            <button class=" value="/">÷</button>
             <!--* SECOND ROW -->
             <!--? 4 -->
-            <button class="Four button number4" value="4">4</button>
+            <button class="number4" value="4">4</button>
             <!--? 5 -->
-            <button class="Five button" value="5">5</button>
+            <button class="number5" value="5">5</button>
             <!--? 6 -->
-            <button class="Six button" value="6">6</button>
+            <button class="number6" value="6">6</button>
             <!--? × -->
-            <button class="malzeichen button" value="*">×</button>
+            <button class=" value="*">×</button>
             <!--* THIRD ROW -->
             <!--? 1 -->
-            <button class="One button" value="1">1</button>
+            <button class="number1" value="1">1</button>
             <!--? 2 -->
-            <button class="Two button" value="2">2</button>
+            <button class="number2" value="2">2</button>
             <!--? 3 -->
-            <button class="Three button" value="3">3</button>
+            <button class="number3" value="3">3</button>
             <!--? minus - -->
-            <button class="minusSign button" value="-">-</button>
+            <button class=" value="-">-</button>
             <!--* FOURTH ROW -->
             <!--? Decimal Point  -->
-            <button class="decimalPoint button" value=".">.</button>
+            <button class=" value=".">.</button>
             <!--? 0  -->
-            <button class="numberZero button" value="0">0</button>
+            <button class="number0" value="0">0</button>
             <!--? =  -->
-            <button class="equalTo button" value="=">=</button>
+            <button class=" value="=">=</button>
             <!--? +  -->
-            <button class="plusSign button" value="+">+</button>
+            <button class=" value="+">+</button>
         </div>
       </div>
 </body>
