--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!--? 9 -->
             <button class="number9" value="9">9</button>
             <!--? ÷  -->
-            <button class=" value="/">÷</button>
+            <button class="division" value="/">÷</button>
             <!--* SECOND ROW -->
             <!--? 4 -->
             <button class="number4" value="4">4</button>
@@ -39,7 +39,7 @@
             <!--? 6 -->
             <button class="number6" value="6">6</button>
             <!--? × -->
-            <button class=" value="*">×</button>
+            <button class="multiplication" value="*">×</button>
             <!--* THIRD ROW -->
             <!--? 1 -->
             <button class="number1" value="1">1</button>
@@ -48,16 +48,16 @@
             <!--? 3 -->
             <button class="number3" value="3">3</button>
             <!--? minus - -->
-            <button class=" value="-">-</button>
+            <button class="subtraction" value="-">-</button>
             <!--* FOURTH ROW -->
             <!--? Decimal Point  -->
-            <button class=" value=".">.</button>
+            <button class="decimalPoint" value=".">.</button>
             <!--? 0  -->
             <button class="number0" value="0">0</button>
             <!--? =  -->
-            <button class=" value="=">=</button>
+            <button class="calculatedResult" value="=">=</button>
             <!--? +  -->
-            <button class=" value="+">+</button>
+            <button class="addition" value="+">+</button>
         </div>
       </div>
 </body>
